
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.4.0"
borsh-derive = "1.3.1"
solana-program = "~1.16.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
solana-program-test = "~1.16.1"
solana-sdk = "~1.16.1"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
