
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = { version = "1.4.0", features = ["derive"] }
borsh-derive = "1.3.1"
solana-program = "=1.17.17"
serum-borsh = "0.8.1-serum.1"

[dev-dependencies]
solana-program-test = "=1.17.17"
solana-sdk = "~1.17.17"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
